# discovery

./: .env.example  .gitattributes  .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-push
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/src/: commands.rs  main.rs
apps/desktop/ui/: app.js  index.html  style.css
crates/mail-auth/: Cargo.toml
crates/mail-auth/src/: flow.rs  lib.rs  provider.rs
crates/mail-core/: Cargo.toml
crates/mail-core/examples/: diagnostic_index.rs  seed_inbox.rs
crates/mail-core/src/: action.rs  address.rs  attachment.rs  backfill.rs  body.rs  compose.rs  drafts.rs  envelope.rs  error.rs  lib.rs  notify.rs  outbox.rs  remote.rs  search.rs  store.rs  sync.rs  test_support.rs  transport.rs
crates/mail-imap/: Cargo.toml
crates/mail-imap/examples/: sync_gmail.rs
crates/mail-imap/src/: convert.rs  lib.rs  mutf7.rs
crates/mail-render/: Cargo.toml
crates/mail-render/src/: lib.rs  sanitize.rs
crates/mail-smtp/: Cargo.toml
crates/mail-smtp/examples/: send_gmail.rs
crates/mail-smtp/src/: lib.rs
docs/: PASSATION.md  PHASE0.md  PHASE1.md  PHASE2.md  PLAN.md
docs/adr/: 0001-structure-workspace.md  0002-shell-desktop-tauri.md  0003-boite-envoi-smtp.md  0004-moteur-de-recherche-fts5.md  0005-gate-e2e-hors-ci-hebergee.md  0006-microsoft-imap-oauth2.md  0007-rattrapage-des-corps.md
e2e/: README.md  launch.mjs  mesure-ram.ps1  mesure.mjs  package-lock.json  package.json  playwright.config.js
e2e/tests/: compte-generique.spec.js  multi-comptes.spec.js  parcours-critiques.spec.js  recherche.spec.js
spikes/body-backfill/: Cargo.toml  README.md
spikes/body-backfill/src/: main.rs
spikes/html-render/: Cargo.toml  README.md
spikes/html-render/src/: main.rs  report.rs  samples.rs  sanitize.rs
spikes/microsoft/: Cargo.toml  README.md
spikes/microsoft/src/: main.rs
spikes/oauth-gmail/: Cargo.toml  README.md
spikes/oauth-gmail/src/: main.rs
spikes/search-engine/: Cargo.toml  README.md
spikes/search-engine/src/: corpus.rs  fts5.rs  main.rs  report.rs  tantivy_bench.rs
spikes/sync-engine/: Cargo.toml  README.md
spikes/sync-engine/src/: db.rs  gmail.rs  main.rs  sync.rs
spikes/web-bridge/: Cargo.toml  README.md
spikes/web-bridge/src/: gmail.rs  main.rs  page.html  server.rs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app.rs  domain.rs  error.rs  gmail_client.rs  lib.rs  local_store.rs  main.rs  mock.rs  secure_store.rs  sync_engine.rs
src/components/: ComposePanel.tsx  ReaderPane.tsx  Sidebar.tsx  ThreadList.tsx
src/lib/: backend.ts  mockData.ts
src/styles/: app.css
