[workspace]
resolver = "2"
members = [
    "crates/mail-core",
    "apps/desktop",
    "spikes/oauth-gmail",
    "spikes/sync-engine",
    "spikes/html-render",
    "spikes/web-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mail-core = { path = "crates/mail-core" }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rusqlite = { version = "0.37", features = ["bundled"] }
thiserror = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
