[package]
name = "discovery-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mail-auth.workspace = true
mail-core.workspace = true
mail-imap.workspace = true
mail-render.workspace = true
mail-smtp.workspace = true
serde.workspace = true
tauri = { version = "2", features = [] }
# Notifications systeme : appelees depuis RUST, pas depuis le JS — les
# capabilities de la fenetre restent au minimum (moindre privilege).
tauri-plugin-notification = "2"

[lints]
workspace = true
