[package]
name = "mail-imap"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
imap.workspace = true
imap-proto.workspace = true
mail-core.workspace = true
mail-parser.workspace = true

[dev-dependencies]
anyhow.workspace = true
mail-auth.workspace = true

[lints]
workspace = true
