[package]
name = "spike-oauth-gmail"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
imap = "3.0.0-alpha.14"
keyring = { version = "3", features = ["windows-native"] }
oauth2 = { version = "5", default-features = false, features = ["reqwest-blocking", "rustls-tls"] }
serde_json = "1"
url = "2"
webbrowser = "1"

[lints]
workspace = true
