[package]
name = "spike-web-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
imap = "3.0.0-alpha.14"
keyring = { version = "3", features = ["windows-native"] }
mail-parser = "0.11"
oauth2 = { version = "5", default-features = false, features = ["reqwest-blocking", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde_json = "1"
tiny_http = "0.12"

[lints]
workspace = true
